end of manual passport

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,16 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-        <h1>
-            Codeial / profile page
-        </h1>
+<h1>
+    Codeial / <%= title%>
+</h1>
+<h1>
+    Name : <%= user.name %>
+</h1>
+<h1>
+    Email : <%= user.email %>
+</h1>
+
+<button >
+    <a href="/user/sign-out">
+        Sign Out
+    </a>
+</button>
