--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -1,3 +1,10 @@
 body{
     background-color: aquamarine;
 }
+button{
+    background-color: brown;
+}
+button a{
+    color: white;
+    text-decoration: none;
+}
