--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,20 @@
-<header>
-    <h1>this is header element</h1>
+<header class="header-container">
+    <h1>Codeial</h1>
+    <ul>
+        <% if(locals.user){%>
+            <li>
+                <a href="/user/profile"><%= user.name%></a>
+            </li>
+            <li>
+                <a href="/user/Sign-out">Sign Out</a>
+            </li>
+            <%}else{%>
+                <li>
+                    <a href="/user/Sign-in">Sign In</a>
+                </li>
+                <li>
+                    <a href="/user/Sign-up">Sign Up</a>
+                </li>
+                <%}%>
+    </ul>
 </header>
