--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
         <%- style%>
         <title>
             Hero main
