--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,3 +2,6 @@
         <h1>
             Codeial / profile page
         </h1>
+
+        <h1><%= user.name%></h1>
+        <h1><%= user.email%></h1>
