--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,5 +1,6 @@
 <header class="header-container">
-    <h1>Codeial</h1>
+    <h1>
+        <a href="/">Codeial</a></h1>
     <ul>
         <% if(locals.user){%>
             <li>
