--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,36 @@
-        <h1>Codeial/<%= title %></h1>
+<h1>Codeial/<%= title %>
+</h1>
 
-        <section id="feed-posts">
-                <h4>Posts</h4>
-                <form action="" id="new-post-form" method="POST">
-                        <textarea name="Content" cols="30" rows="3"></textarea>
-                        <input type="submit" value="Post">
-                </form>
-        </section>
+<section id="feed-posts">
+        <h1>Posts</h1>
+        <% if(locals.user){%>
+        <form action="/posts/create" id="new-post-form" method="POST">
+                <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
+                <input type="submit" value="Post">
+        </form>
+        <%}%>
+        <div id="posts-list-container">
+                <ul>
+                        <%for(post of posts){%>
+                                <li>
+                                        <%= post.content%>
+                                        <br>
+                                        <small>
+                                                <%= post.user.name%>
+                                        </small>
+                                        
+                                        <% if(locals.user){%>
+                                               <div class="post-comments">
+                                                <form action="/comments/create" method="POST">
+                                                        <input type="text" name="content" placeholder="Type here to add comment...">
+                                                        <input type="hidden" name="post" value="<%= post%>">
+                                                        <input type="submit" value="Add Comment">
+                                                </form>
+                                        </div>
+                                                <%}%>
+                                        
+                                </li>
+                                <%}%>
+                </ul>
+        </div>
+</section>
