--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,24 +13,12 @@
                 <ul>
                         <%for(post of posts){%>
                                 <li>
-                                        <%= post.content%>
-                                        <br>
-                                        <small>
-                                                <%= post.user.name%>
-                                        </small>
-                                        
-                                        <% if(locals.user){%>
-                                               <div class="post-comments">
-                                                <form action="/comments/create" method="POST">
-                                                        <input type="text" name="content" placeholder="Type here to add comment...">
-                                                        <input type="hidden" name="post" value="<%= post%>">
-                                                        <input type="submit" value="Add Comment">
-                                                </form>
-                                        </div>
-                                                <%}%>
+                                        <%-include('_posts')%>
                                         
                                 </li>
                                 <%}%>
                 </ul>
         </div>
 </section>
+
+<script src="/js/home_posts.js"></script>
