--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,18 +1,48 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="/css/layout.css">
-        <link rel="stylesheet" href="/css/header.css">
-        <link rel="stylesheet" href="/css/footer.css">
-        <%- style%>
+
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <%- style%>
         <title>
             Hero main
         </title>
-    </head>
-    <body>
-        <%- include('_header');%>
-        <%- body %>
-        <%- include('_footer');%>
+</head>
 
-        <%- script%>
-    </body>
-    </html>
+<body>
+    <%- include('_header');%>
+
+        <%- body %>
+            <%- include('_footer');%>
+
+                <%- script%>
+                    <script>
+                                 <% if (flash.success && flash.success.length > 0) {%>
+                                    new Noty({
+                                        theme : 'relax',
+                                        text : '<%= flash.success %>',
+                                        type: 'success',
+                                        layout : 'topRight',
+                                        timeout : 1500
+                                        
+                                    }).show();
+            
+            <%}else if(flash.error && flash.error.length > 0) {%>
+            new Noty({
+                                        theme : 'relax',
+                                        text : '<%= flash.error %>',
+                                        type: 'error',
+                                        layout : 'topRight',
+                                        timeout : 1500
+                                        
+                                    }).show();
+                                    <%}%>
+                    </script>
+</body>
+
+</html>
