--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,7 +1,20 @@
 <link rel="stylesheet" href="/css/user_profile.css">
+
+<img src="<%= user.avatar %>" alt="user.name" width="100">
+
         <h1>
             Codeial / profile page
         </h1>
+
+        <%if(user.id == profile_user.id){ console.log(user.id) %>
+            <form action="/user/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
+                <input type="text" name="name" placeholder="Your Name" value="<%= locals.user.name %>" required>
+                <input type="email" name="email" placeholder="Your Email" value="<%= locals.user.email %>" required>
+                <input type="file" name="avatar" placeholder="Profile Picture">
+                <input type="submit" value="Update">
+            </form>
+
+        <% } %>
 
         <h1><%= user.name%></h1>
         <h1><%= user.email%></h1>
